Prevent overflow on narrow columns

--- a/files/main.css
+++ b/files/main.css
@@ -46,6 +46,10 @@ body {
   padding: 12px 15px 12px 0;
 }
 
+.desc {
+  overflow: hidden;
+}
+
 .desc»name {
   font-size: 14px;
   line-height: 18px;
